<resources>
    <string name="app_name">Forks and Knife</string>
    <string name="title_activity_edit_rec">Редактирование</string>
    <string name="title_activity_view_rec">Просмотр</string>
    <string name="rec_name">Название:</string>
    <string name="rec_descr">Описание:</string>
    <string name="rec_ingred">Ингредиенты:</string>
    <string name="time">Время, мин.:</string>
    <string name="time_format_w_mins">%1$s мин.</string>
    <string name="rec_name_ing_is_empty">Не указано название ингредиента.</string>
    <string name="rec_volume_ing_is_empty">Не указан объем ингредиента.</string>
    <string name="rec_unit_ing_is_empty">Не указаны единицы измерения.</string>
    <string name="rec_name_is_empty">Не указано название рецепта.</string>
    <string name="rec_step_descr_is_empty">В шаге %1$s не указано описание.</string>
    <string name="rec_steps_empty">Не создано ни одного шага.</string>
    <string name="last_step">Нельзя удалить единственный шаг.</string>
    <string name="delete">Удалить</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="rewrite_recipe">Перезаписать существующие рецепты ?</string>
    <string name="delete_confirm">Действительно удалить: %1$s ?</string>
    <string name="delete_step_confirm">Действительно удалить шаг № %1$d ?</string>
    <string name="cancel">Отмена</string>
    <string name="preparation">Приготовление:</string>
    <string name="share">Поделиться</string>
    <string name="about">О приложении</string>
    <string name="help">Помощь</string>
    <string name="help_url"><![CDATA[http://azimuth.stormway.ru/forksnknife/]]></string>
    <string name="action_settings">Настройки</string>
    <string name="export_to_sd">Экспорт ⇧</string>
    <string name="import_from_sd">Импорт ⇩</string>
    <string name="title_activity_about_rec">О приложении</string>
    <string name="about_info">Приложение для хранения кулинарных рецептов.</string>
    <string name="feedback"><![CDATA[<a href=\"mailto:crew4dev@gmail.com\">Связаться с автором.</a>]]></string>
    <string name="import_succsess">Данные успешно импортированы.</string>
    <string name="import_succsess_count">Добавлено %1$d рецептов.</string>
    <string name="export_succsess">Данные успешно экспртированы.</string>
    <string name="recipe">Рецепт:</string>
    <string name="action_new_recipe">Новый рецепт</string>
    <string name="action_shopping_list">Список покупок</string>
    <string name="add_to_shopping_list">Игредиент добавлен в список покупок.</string>
    <string name="edit">редактировать</string>
    <string name="gallery">Галерея</string>
    <string name="cam">Камера</string>
    <string name="gallery_not_avaible">Галерея не доступна</string>
    <string name="not_avaible">не доступно</string>
    <string name="error_recipe_is_not_found">Рецепт не найден.</string>
    <string name="error_import">Ошибка импорта данных.</string>
    <string name="error_export">Ошибка экспорта данных.</string>
    <string name="error_access">Ошибка доступа к\n: %1$s</string>
    <string name="error_load_image">Ошибка загрузки изображения.</string>
    <string name="error_parse_volume">Не верный объем ингредиента: %1$s.</string>
    <string name="error_create_folder">Ошибка создания папки %1$s</string>
    <string name="error_copy_file">Ошибка копировния файла %1$s</string>
    <string name="error_work_folder">Ошибка работы с папкой %1$s</string>
    <string name="error_find_storages">Ошибка при поиске хранилищ %1$s.</string>
    <string name="error_load_reciple">Ошибка при загрузке рецепта из %1$s.</string>
    <string name="error_write">Ошибка записи.</string>
    <string name="clear_folder">Очистить папку</string>
    <string name="about_thanks"><![CDATA[Спасибо:<br/>за идею: моей жене Катерине<br/>за логотип: <a href=\"http://www.freepik.com\">http://www.freepik.com</a>]]></string>
    <string name="about_wish">Приятного аппетита.</string>
    <string name="rec_tag">Метки</string>
    <string name="tech_info">Тех. информация</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="share_manual">Пожалуйста, сохраните прикрепленный файл на ваше устройство. Запустите приложение %1$s и в главном меню выберите пункт %2$s.</string>

    <string name="coocking_step_info">%1$s из %2$s</string>

    <string name="invalid_time">Время не может быть больше 99999 минут.</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Главные</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_folder">Хранение данных</string>

    <string name="pref_title_ringtone">Звук таймера</string>
    <string name="pref_ringtone_silent">Тишина</string>

    <string name="settings">Настройки</string>
    <string name="unknown_code_version">Не определено</string>
    <string name="code_version_prefix">Текущая версия</string>

    <string name="title_activity_coocking">Приготовление</string>
    <string name="prev_button">Назад</string>
    <string name="next_button">Дальше</string>
    <string name="import_rec">Загрузить рецепт</string>
    <string name="share_as_text">Поделиться текстом</string>
    <string name="share_as_file">Поделиться файлом</string>
    <string name="store_device">Устройство: </string>
    <string name="store_internal">Внутреняя память: </string>
    <string name="store_external">Карта памяти: </string>
    <string name="store_mounts">Монтированные: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_shoppng">ShoppngActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
