<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_export"
        android:orderInCategory="200"
        android:visible="false"
        android:title="@string/export_to_sd"/>
    <item
        android:id="@+id/menu_import"
        android:orderInCategory="300"
        android:visible="false"
        android:title="@string/import_from_sd"/>
    <item
        android:id="@+id/menu_import_rec"
        android:orderInCategory="400"
        android:title="@string/import_rec"/>
    <item
        android:id="@+id/menu_clearFolder"
        android:orderInCategory="500"
        android:visible="false"
        android:title="@string/clear_folder"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="600"
        android:visible="false"
        android:title="@string/settings"/>
    <item
        android:id="@+id/menu_help"
        android:orderInCategory="700"
        android:title="@string/help"/>
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="800"
        android:title="@string/about"/>
    <item
        android:id="@+id/menu_rec_delete"
        android:title="@string/delete"
        android:visible="false"/>
    <item
        android:id="@+id/action_show_shopping_cart"
        android:icon="@drawable/ic_action_add_shopping_cart"
        android:title="@string/action_shopping_list"
        yourapp:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/action_new_recipe"
        yourapp:showAsAction="ifRoom"/>
</menu>

