<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pavel.elagin.ladle.Activites.AboutActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_info" />

    <TextView
        android:id="@+id/about_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_feedback" />

    <TextView
        android:id="@+id/about_thanks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/about_thanks" />

    <TextView
        android:id="@+id/about_wish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/about_wish" />

    <Button
        android:id="@+id/button_tech_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tech_info" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/about_tech_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:visibility="gone" />

    </ScrollView>

</LinearLayout>
