<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_view_rec"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.crew4dev.forksnknife.Activites.ViewRecActivity"
    tools:showIn="@layout/activity_view_rec">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/rec_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/rec_descr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Descr"
                android:textSize="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rec_tag"/>

            <TextView
                android:id="@+id/rec_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rec_ingred"/>

            <TableLayout
                android:id="@+id/table_rec_ing_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="1"
                android:stretchColumns="*" />

            <TextView
                android:id="@+id/rec_total_time_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/rec_preparation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preparation"/>

            <TextView
                android:id="@+id/rec_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp" />

            <TableLayout
                android:id="@+id/table_rec_steps_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:shrinkColumns="2"
                android:stretchColumns="*" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
